# advent-of-code

./: .gitignore  .tmuxinator.yml  README.md  README.rst  TODO.md  commit-to-all.sh  package.json  pyproject.toml  requirements.txt
advent_of_code/: __main__.py  cli.py
advent_of_code/y2015/: day01.py  day02.py  day03.py  day05.py  day06.py  day07.py  day08.py
docs/: README.md
elixir/: README.md
go/: README.md
inputs/2021/: day01.txt
nodejs/: README.md
python/: README.rst  aoc.py  pyproject.toml
python/advent_of_code/: __init__.py  cli.py  template.py  tools.py  utils.py
python/advent_of_code/y2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
python/advent_of_code/y2020/: day01.py  day02.py
python/advent_of_code/y2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
python/tests/: test_2020.py  test_2021.py
ruby/: README.md
rust/: Cargo.toml  README.md  RUST.md
rust/src/: lib.rs  main.rs
rust/src/y2015/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  mod.rs
rust/src/y2016/: d01.rs  d14.rs
rust/src/y2017/: d01.rs  mod.rs
rust/src/y2019/: mod.rs
rust/src/y2023/: mod.rs
src/: main.rs
