[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "advent_of_code"
author = "Vinay Keerthi"
author-email = "ktvkvinaykeerthi@gmail.com"
home-page = "https://stonecharioteer.com/aoc.html"
classifiers = ["License :: OSI Approved :: MIT License"]

